--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Template • TodoMVC</title>
+		<title>Vanilla JS • TodoMVC</title>
 		<link rel="stylesheet" href="node_modules/todomvc-common/base.css">
 		<link rel="stylesheet" href="node_modules/todomvc-app-css/index.css">
 		<!-- CSS overrides - remove if you don't need it -->
@@ -24,7 +24,7 @@
 					<!-- List items should get the class `editing` when editing and `completed` when marked as completed -->
 					<li class="completed">
 						<div class="view">
-							<input class="toggle" type="checkbox" checked>
+							<input class="toggle" type="checkbox" checked autocomplete="off">
 							<label>Taste JavaScript</label>
 							<button class="destroy"></button>
 						</div>
@@ -32,7 +32,7 @@
 					</li>
 					<li>
 						<div class="view">
-							<input class="toggle" type="checkbox">
+							<input class="toggle" type="checkbox" autocomplete="off">
 							<label>Buy a unicorn</label>
 							<button class="destroy"></button>
 						</div>
@@ -70,6 +70,6 @@
 		</footer>
 		<!-- Scripts here. Don't remove ↓ -->
 		<script src="node_modules/todomvc-common/base.js"></script>
-		<script src="js/app.js"></script>
+		<script type="module" src="js/app.js"></script>
 	</body>
 </html>
