--- a/index.html
+++ b/index.html
@@ -1,25 +1,21 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 	<head>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Vanilla JS • TodoMVC</title>
-		<link rel="stylesheet" href="/vendor/todomvc-common/base.css" />
-		<link rel="stylesheet" href="/vendor/todomvc-app-css/index.css" />
+		<link rel="stylesheet" href="vendor/todomvc-common/base.css">
+		<link rel="stylesheet" href="vendor/todomvc-app-css/index.css">
 	</head>
 	<body>
 		<section class="todoapp">
 			<header class="header">
 				<h1>todos</h1>
-				<input
-					class="new-todo"
-					placeholder="What needs to be done?"
-					autofocus
-				/>
+				<input class="new-todo" placeholder="What needs to be done?" autofocus>
 			</header>
 			<!-- This section should be hidden by default and shown when there are todos -->
 			<section class="main hidden">
-				<input id="toggle-all" class="toggle-all" type="checkbox" />
+				<input id="toggle-all" class="toggle-all" type="checkbox">
 				<label for="toggle-all">Mark all as complete</label>
 				<ul class="todo-list">
 					<!-- These are here just to show the structure of the list items -->
@@ -73,7 +69,7 @@
 			<p>Part of <a href="http://todomvc.com">TodoMVC</a></p>
 		</footer>
 		<!-- Scripts here. Don't remove ↓ -->
-		<script src="/vendor/todomvc-common/base.js"></script>
-		<script type="module" src="/js/app.js"></script>
+		<script src="vendor/todomvc-common/base.js"></script>
+		<script type="module" src="js/app.js"></script>
 	</body>
 </html>
